# gmx_sim

./: .gitignore  pyproject.toml
gmx_sim/: __init__.py  example_input.toml  get_mdp_options.py  gmx_commands.py  gmx_subprocess.py  run_subprocess.py  simulation.py  utils.py
gmx_sim_bak/: base_class.py  simulation.py
