[tool.poetry]
name = "gmx-sim"
version = "0.1.1"
description = "Python wrapper for gromacs simulations."
authors = ["Lucas Tepper <lucas.tepper.91@gmail.com>"]
license = "LICENSE.txt"
readme = "README.md"
packages = [{include = "gmx_sim"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
