[tool.poetry]
name = "gmx_sim"
version = "0.1.1"
description = "Python wrapper for gromacs simulations."
authors = ["lucastepper <lucas.tepper.91@gmail.com>"]
license = "LICENSE.txt"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
